MIGRATION-SC/baseline-k8s/collector-netpol.yaml








apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  podSelector:
    matchLabels:
      app: collector
  policyTypes:
    - Ingress
